<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3AB95"
    tools:context=".AuthorizationActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_custom_rectangle"
        android:fontFamily="@font/habibi"
        android:text="@string/enter"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doYouHaveAccTextView"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/enterEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorizTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="61dp"
        android:layout_height="30dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/habibi"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/passTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/habibi"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Пароль" />

    <TextView
        android:id="@+id/authorizTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/habibi"
        android:text="@string/authorization"
        android:textColor="#000000"
        android:textSize="32sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doYouHaveAccTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/habibi"
        android:text="@string/doYouWantRegistr"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>